--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MyTODOListApp</string>
     <string name="hello_world">HELLO WORLD!</string>
-    <string name="ysxb">114514!</string>
+    <string name="y1">HELLO!</string>
 </resources>
